# wiki-scraper

./: .gitignore  README.md  file1.txt  md  my.txt  result.txt  sample.txt  task.py  warmup.md
linux_journey/: banan.txt  file2.txt  generate.py  peanuts.txt  sam.txt  sample.txt.save  start.py
projects/: notify.py  task_manager.py
projects/data-analysis/: pyproject.toml
projects/ml-basics/week-1/: decision_Tree.ipynb
projects/ml-basics/week-2/: mnist-logistic.pth
projects/ml-basics/week-3/.ipynb_checkpoints/: decision_Tree-checkpoint.ipynb
projects/ml-basics/week-3/workspace/: notebook.ipynb  requirements.txt
projects/ml-basics/week-3/workspace/.ipynb_checkpoints/: notebook-checkpoint.ipynb
projects/ml-basics/week-4/: digits.ipynb  solving-mnist-using-pytorch.ipynb
projects/web-scraper/: pyproject.toml
projects/wikipedia-scraper/: LICENSE.txt  README.md  animal_detection_training_full.ipynb  new.py  pyproject.toml
projects/wikipedia-scraper/.ipynb_checkpoints/: animal_detection_training_full-checkpoint.ipynb
projects/wikipedia-scraper/src/wikipedia_scraper/: __about__.py  __init__.py  wikipedia_scraper.py
projects/wikipedia-scraper/tests/: test_scraper.py
python-projects/data-analysis/: requirements.txt
python-projects/refresher/: test.py
python-projects/web-scraper/: README.md
