[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-analysis"
dynamic = ["version"]
description = 'meh'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "rgsuhas", email = "rgsuhas6364@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/rgsuhas/data-analysis#readme"
Issues = "https://github.com/rgsuhas/data-analysis/issues"
Source = "https://github.com/rgsuhas/data-analysis"

[tool.hatch.version]
path = "src/data_analysis/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/data_analysis tests}"

[tool.coverage.run]
source_pkgs = ["data_analysis", "tests"]
branch = true
parallel = true
omit = [
  "src/data_analysis/__about__.py",
]

[tool.coverage.paths]
data_analysis = ["src/data_analysis", "*/data-analysis/src/data_analysis"]
tests = ["tests", "*/data-analysis/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
