[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "web-scraper"
dynamic = ["version"]
description = 'web scrping script collection'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "rgsuhas", email = "rgsuhas6364@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/rgsuhas/web-scraper#readme"
Issues = "https://github.com/rgsuhas/web-scraper/issues"
Source = "https://github.com/rgsuhas/web-scraper"

[tool.hatch.version]
path = "src/web_scraper/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/web_scraper tests}"

[tool.coverage.run]
source_pkgs = ["web_scraper", "tests"]
branch = true
parallel = true
omit = [
  "src/web_scraper/__about__.py",
]

[tool.coverage.paths]
web_scraper = ["src/web_scraper", "*/web-scraper/src/web_scraper"]
tests = ["tests", "*/web-scraper/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
